# cnm

./: .gitignore  environment.yml  pyproject.toml
configs/: finetune.yaml  pretrain.yaml
configs/model/: base.yaml  large.yaml
scripts/: download_ids.py  evaluate.py  finetune.py  prepare_corpus.py  prepare_ids.py  pretrain.py  smoke_pretrain_all.py  train_8gpu.sh
src/cnm/: __init__.py
src/cnm/data/: __init__.py  collator.py  ids_parser.py  tokenizer.py  tree.py  vocab.py
src/cnm/evaluation/: __init__.py  clue.py
src/cnm/model/: __init__.py  configuration_cnm.py  embeddings.py  modeling_cnm.py  tree_mlp.py
src/cnm/training/: __init__.py  args.py  losses.py  trainer.py  wwm.py
tests/: __init__.py  test_model.py  test_tree_mlp.py
